--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "yiyu-zhang-mingyi-shi-project2",
   "version": "0.1.0",
+  "engines":{
+    "node": "16.14.2"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
